# libint-rs

./: CHANGELOG.md  Cargo.toml  flake.nix  release.toml
libint/: Cargo.toml  release.toml
libint-build/: Cargo.toml  README.md
libint-build/probe/: CMakeLists.txt
libint-src/: Cargo.toml  build.rs
libint-sys/: Cargo.toml  build.rs
libint-sys/shim/include/: atom.h  basis.h  engine.h  shell.h
libint-sys/shim/src/: atom.cc  basis.cc  engine.cc  shell.cc
libint-sys/src/: bridge.rs  lib.rs
libint-sys/src/bridge/: atom.rs  basis.rs  engine.rs  initialize.rs  shell.rs
libint/src/: atom.rs  basis.rs  element.rs  engine.rs  lib.rs  shell.rs  utils.rs
