[workspace]
resolver = "3"
members = ["libint", "libint-src", "libint-sys"]

[workspace.dependencies]
cxx = "1.0.194"
cxx-build = "1.0.194"
libint-src = { version = "0.1.0", path = "libint-src" }
libint-sys = { version = "0.1.0", path = "libint-sys" }
pkg-config = "0.3.32"

[workspace.package]
version = "0.1.0"
authors = ["Stan Papadopoulos <stan.papadopoulos@proton.com>"]
description = "Rust bindings for Libint"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/stanpapa/libint"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
must_use_candidate = "allow"
unreadable_literal = "allow"

[patch.crates-io]
pkg-config = { git = "https://github.com/piguycs/pkg-config-rs.git", branch = "dpdk-whole-archive" }
