[package]
name = "libint"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
approx.workspace = true
cxx.workspace = true
libint-sys.workspace = true
thiserror.workspace = true

[lints]
workspace = true
